[package]
name = "envmgr"
version = "0.1.2"
edition = "2024"
authors = ["Franz Geffke <mail@gofranz.com>"]
description = "Manage .env files across git branches with versioning, diffing, and optional encryption"
license = "GPL-3.0"
repository = "https://github.com/franzos/envmgr"
homepage = "https://github.com/franzos/envmgr"
keywords = ["env", "dotenv", "git", "encryption", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
rand = "0.8"
rpassword = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
colored = "3"
comfy-table = "7.1"
thiserror = "2"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "utils"
assets = [
    ["target/release/envmgr", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/envmgr", dest = "/usr/bin/envmgr", mode = "755" },
]

[dev-dependencies]
tempfile = "3"
